<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arm4r_teleop</name>
    <version>0.6.2</version>
    <description>Generic keyboard teleop for twist robots.</description>

    <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>

    <license>BSD</license>

    <url type="website"></url>

    <author>Graylin Trevor Jay</author>
    <author>Juan Miguel Jimeno</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>